css/about-styles.css
body {
  color: #222222;
  font-size: 1em;
  font-family: "Open Sans", "Helvetica Neue", sans-serif;
}

.masthead-heading,
.masthead-intro,
.content-footer {
  text-align: center;
}

.masthead {
  padding: 6em 0;
  background-image: url('https://images.unsplash.com/photo-1451906278231-17b8ff0a8880?crop=entropy&dpr=2&fit=crop&fm=jpg&h=625&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1200');
  background-repeat: no-repeat;
  background-size: cover;
}

.masthead-intro {
  margin-bottom: 0.1em;
  color:white;
  font-family: "Gentium Book Basic", Georgia, serif;
  font-size: 2em;
}

.masthead-heading {
  margin-top: -0.2em;
  color: white;
  font-family: "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  font-size: 6em;
  letter-spacing: -0.02em;
  text-transform: uppercase;
}

.introduction-section,
.location-section,
.questions-section {
  max-width: 38em;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
}

.social > li {
  display: inline-block;
  padding: o;
}

.introduction-section > p,
.location-section > p,
.content-footer > p {
  font-weight: 300;
  letter-spacing: 0.05em;
}

.questions-section > h2 {
  font-family: "Gentium Book Basic", Georgia, serif;
  font-size: 1.2em;
  font-weight: bold;
  margin: 2em 0 1em 0;
}

section > h1 {
  margin-top: 2em;
}


@media only screen and (max-width: 500px) {
    .masthead-heading {
        font-size: 3em;
    }
}

@media only screen and (max-width: 500px) {
    .masthead {
        padding: 3em 0;
    }
    .masthead-heading {
        font-size: 3em;
    }
}

@media only screen and (max-width: 500px) {
    .introduction-section,.location-section,.questions-section {
        padding-left: 2.5em;
        padding-right: 2.5em;
    }
}

